Fix alignment issue of avatar image caused by adding back the Close 'X'

--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,9 @@ hr {
 /* The Close Button */
 .close {
 	color: #aaa;
-	float: right;
+	position: absolute;
+	top: 8px;
+	right: 16px;
 	font-size: 28px;
 	font-weight: bold;
 }
